2011-01-20	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libblock/src/show_bdbuf.c, score/src/objectmp.c,
	score/src/threadmp.c: Avoid chain API violations.

2011-01-17	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libmisc/shell/main_dd.c: Make symbol unique to avoid conflict with
	same name in <sys/stat.h>.

2011-01-17	Alin Rus <alin.codejunkie@gmail.com>

	* posix/src/aio_cancel.c: Fixed ending of if braces.

2011-01-17	Alin Rus <alin.codejunkie@gmail.com>

	* posix/src/aio_misc.c: Add debug information. Fixed idle_threads/
	active_threads issues. Fixed infinite loop in rtems_aio_handle().

2011-01-08	Alin Rus <alin.codejunkie@gmail.com>

	* posix/src/aio_misc.c: Fix rtems_aio_remove_req did not iterate
	over chain.
	* posix/src/aio_cancel.c: Add debug information. Add check for 
	bad file descriptor. Add else branch for cancel request on empty
	IQ chain.

2011-01-04	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libcsupport/src/error.c: Scheduler Simulator compilation always
	defines __RTEMS_VIOLATE_KERNEL_VISIBILITY__. So avoid redefinition
	warning.

2011-01-04	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libfs/src/imfs/imfs.h, libfs/src/imfs/imfs_readlink.c: readlink
	filesystem entry should return ssize_t.

2011-01-04	Joel Sherrill <joel.sherrill@oarcorp.com>

	* posix/src/aio_cancel.c: Use perfd field not next_fd.

2011-01-04	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libfs/src/nfsclient/src/nfs.c: readlink filesystem entry should
	return ssize_t.

2010-12-28	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libfs/src/dosfs/msdos_misc.c: Create short file names acceptable for
	Windows.
	* libfs/src/dosfs/msdos_conv.c: Fixed convertion of half seconds to
	seconds.

2010-12-27	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libfs/src/dosfs/msdos.h, libfs/src/dosfs/msdos_misc.c,
	libfs/src/dosfs/msdos_create.c: Create valid create and modfied date
	and time.

2010-12-17	Joel Sherrill <joel.sherrill@oarcorp.com>